# elm-pebble

./: .dockerignore  .gitignore  .gitmodules  .tool-versions  CHANGELOG.md  Dockerfile  README.md  docker-compose.external-disk.example.yml  docker-compose.postgres.example.yml  docker-compose.yml  elm.json  start-ide-local.sh
.cursor/: mcp.json
.cursor/rules/: clear-unsupported-feedback.mdc  elmc-c-codegen.mdc  elmc-generic-fusion.mdc  fix-toolchain-not-apps.mdc  no-git-commit-without-ask.mdc  runtime-genericity.mdc  test-ulimit-guard.mdc
.github/: FUNDING.yml
.github/workflows/: core-ir-types.yml  debugger-strict.yml  docker-image.yml  elmc-codegen.yml
docker/: entrypoint.sh  pebble_sdk.sh  wasm_emulator.sh
docs/: ELMX_DEBUGGER_FIDELITY_MATRIX.md  ELM_EXECUTOR_FIDELITY_MATRIX.md  IDE_ACP.md  IDE_MCP.md  IDE_ROADMAP.md  PEBBLE_C_API_MATRIX.md  PEBBLE_PHONE_API_MATRIX.md  PEBBLE_PHONE_PROTOCOL.md  PEBBLE_PHONE_VALIDATION_CHECKLIST.md  REPO_CLEANUP_AND_SCOPE.md  mcp-weather-watchface-showcase.md
elm_ex/: .dialyzer_ignore.exs  .gitignore  elm_ex_expr_parser.erl  mix.exs
elm_ex/docs/: tree_sitter_corpus.md  tree_sitter_corpus_baseline.json
elm_ex/lib/: elm_ex.ex
elm_ex/probe_CharLiterals/: elm.json
elm_ex/scripts/: generate_tree_sitter_baseline.exs  sync_tree_sitter_corpus.sh
elm_executor/: .dialyzer_ignore.exs  README.md  mix.exs
elm_pebble_dev/: .gitignore  README.md  elm-pages.config.mjs  elm.json  index.js  index.ts  package-lock.json  package.json  render.yaml  run.sh  tailwind.input.css
elmc/: .dialyzer_ignore.exs  .gitignore  README.md  list_excerpt.wasm  min_funcspace.wasm  min_load6.wasm  min_setat5.wasm  mix.exs
elmc-wasm-runtime/: Makefile  README.md
elmc/docs/: storage_plan.md  (+12 more)
elmc/test/fixtures/pebble_surface_project/.pebble-sdk/app/src/c/elmc/: CMakeLists.txt  Makefile
elmc/test/fixtures/pebble_surface_project/.pebble-sdk/app/src/c/elmc/c/: elmc_generated.c  elmc_generated.h  elmc_pebble.c  elmc_pebble.h  elmc_worker.c  host_harness.c
elmc/test/fixtures/pebble_surface_project/.pebble-sdk/app/src/c/elmc/runtime/: elmc_runtime.c  elmc_runtime.h
elmx/: .dialyzer_ignore.exs  .gitignore  elmx  mix.exs
ide/: .dialyzer_ignore.exs  .gitignore  DIAGNOSTICS_PHASE2_BACKLOG.md  README.md  SYNTAX_HS_COVERAGE_MATRIX.md  a.out  mix.exs
scripts/: REAL_WORLD_RUNNER.md  build-elm-pebble-dev-wasm.sh  build_wasm_emulator_runtime.sh  corpus-probe-paths.sh  debugger_release_gate.sh  doc_snippet_runtime_eval.exs  mix-run-limited.sh  mix-test-limited.sh  mix-test-per-template.sh  mix-test-strict-gate.sh  real_world_elm_runner.py  run-with-ulimit.sh
shared/: parse_all.json
src/: Pebble.elm
(+3243 files in other folders)
